--- a/SalForceApp/app/src/main/res/layout/activity_draft_list.xml
+++ b/SalForceApp/app/src/main/res/layout/activity_draft_list.xml
@@ -1,13 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
+
+
+
+
+
+
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="demo.recycle.com.salforceapp.Activity.DraftList">
+    tools:context="demo.recycle.com.salforceapp.Activity.DraftList"
+        android:orientation="vertical">
 
 
-    <ListView
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:background="?attr/colorPrimary"
+            android:minHeight="?attr/actionBarSize"
+            app:titleTextColor="@android:color/white">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:gravity="right"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="40dp"
+                        android:text="Draft"
+                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/session"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/green_dot"
+                    android:visibility="gone" />
+
+            </LinearLayout>
+        </android.support.v7.widget.Toolbar>
+
+
+
+        <ListView
         android:id="@+id/listview"
         android:layout_width="fill_parent"
         android:layout_marginTop="15dp"
@@ -19,4 +76,15 @@
 
 
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigation"
+        android:layout_width="200dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+
+        app:menu="@menu/draft" />
+
+
+</android.support.v4.widget.DrawerLayout>
