--- a/SalForceApp/app/src/main/res/menu/task.xml
+++ b/SalForceApp/app/src/main/res/menu/task.xml
@@ -10,11 +10,6 @@
 
 
 
-    <item
-        android:id="@+id/get_Task"
-        android:orderInCategory="100"
-        android:title="Get Task"
-        app:showAsAction="never" />
 
 
     <item
@@ -24,12 +19,18 @@
         app:showAsAction="never" />
 
 
+    <item
+        android:id="@+id/get_Task"
+        android:orderInCategory="100"
+        android:title="Create Task"
+        app:showAsAction="never" />
 
-       <item
+
+    <!--   <item
            android:id="@+id/logout"
            android:orderInCategory="100"
            android:title="Logout"
-           app:showAsAction="never" />
+           app:showAsAction="never" />     -->
 
 
-   </menu>
+</menu>
