--- a/SalForceApp/app/src/main/res/menu/main.xml
+++ b/SalForceApp/app/src/main/res/menu/main.xml
@@ -25,11 +25,20 @@
 
 
 
+    <item
+        android:id="@+id/get_business"
+        android:orderInCategory="100"
+        android:title="Scan BusinessCard"
+        app:showAsAction="never" />
+
+
+
        <item
            android:id="@+id/logout"
            android:orderInCategory="100"
            android:title="Logout"
            app:showAsAction="never" />
+
 
 
    </menu>
