--- a/SalForceApp/app/src/main/res/layout/activity_draft_list.xml
+++ b/SalForceApp/app/src/main/res/layout/activity_draft_list.xml
@@ -47,8 +47,11 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="40dp"
+                        android:layout_marginRight="40dp"
                         android:text="Draft"
+                        android:textColor="#ffffff"
+                        android:layout_gravity="center"
+                        android:gravity="center"
                         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
                 </LinearLayout>
 
