--- a/SalForceApp/app/src/main/res/layout/activity_note.xml
+++ b/SalForceApp/app/src/main/res/layout/activity_note.xml
@@ -48,8 +48,11 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="40dp"
-                        android:text="SalesForce"
+                       android:layout_marginRight="40dp"
+                        android:gravity="center"
+                        android:layout_gravity="center"
+                        android:text="@string/app_name"
+                        android:textColor="#ffffff"
                         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
                 </LinearLayout>
 
