--- a/SalForceApp/app/src/main/res/layout/activity_task_list.xml
+++ b/SalForceApp/app/src/main/res/layout/activity_task_list.xml
@@ -33,7 +33,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
+
             android:gravity="right"
             android:orientation="horizontal">
 
@@ -45,8 +45,11 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="40dp"
+                    android:layout_marginRight="50dp"
+                    android:layout_gravity="center"
                     android:text="Task"
+                    android:gravity="center"
+                    android:textColor="#ffffff"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
             </LinearLayout>
 
