--- a/SalForceApp/app/src/main/res/layout/main.xml
+++ b/SalForceApp/app/src/main/res/layout/main.xml
@@ -26,8 +26,11 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="40dp"
-                    android:text="SalesForce"
+                    android:layout_marginRight="40dp"
+
+                    android:text="@string/app_name"
+                    android:textColor="#ffffff"
+                    android:gravity="center"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                     /></LinearLayout>
 
