--- a/SalForceApp/app/src/main/res/layout/activity_bussinesscard.xml
+++ b/SalForceApp/app/src/main/res/layout/activity_bussinesscard.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:textColor="#ffffff"
+        android:textColor="#800000"
         android:text="no text"
         android:textSize="20dp" />
 
